cleaning up description

--- a/docs/howtos/bert-qa-benchmarking/index-bert-qa-benchmarking-with-redisai-and-redisgears.mdx
+++ b/docs/howtos/bert-qa-benchmarking/index-bert-qa-benchmarking-with-redisai-and-redisgears.mdx
@@ -1,6 +1,7 @@
 ---
 id: bert-qa-benchmarking-with-redisai-and-redisgears
 title: Benchmarks for BERT Large Question Answering inference for RedisAI and RedisGears
+description: Explore the challenges and opportunities associated with deploying large BERT QA models inside Redis.
 sidebar_label: Benchmarks for BERT Large Question Answering inference for RedisAI and RedisGears
 slug: /community/tutorials/bert-qa-benchmarking-with-redisai-and-redisgears
 marp: true
@@ -18,7 +19,7 @@ tags:
 
 ## Introduction
 
-In this article, we will explore the challenges and opportunities associated with deploying a large BERT Question Answering Transformer model (bert-large-uncased-whole-word-masking-finetuned-squad) models inside Redis, from Hugging Face, where [RedisGears](/howtos/redisgears) and [RedisAI](/howtos/redisai/getting-started) perform a lot of heavy lifting while leveraging the in-memory datastore Redis.
+In this article, we will explore the challenges and opportunities associated with deploying [large BERT Question Answering Transformer](https://huggingface.co/bert-large-uncased-whole-word-masking-finetuned-squad) models inside Redis, from Hugging Face, where [RedisGears](/howtos/redisgears) and [RedisAI](/howtos/redisai/getting-started) perform a lot of heavy lifting while leveraging the in-memory datastore Redis.
 
 ## Why do we need RedisAI?
 
