cleaning up description

--- a/docs/howtos/bert-qa-benchmarking/index-bert-qa-benchmarking-with-redisai-and-redisgears.mdx
+++ b/docs/howtos/bert-qa-benchmarking/index-bert-qa-benchmarking-with-redisai-and-redisgears.mdx
@@ -19,7 +19,7 @@ tags:
 
 ## Introduction
 
-In this article, we will explore the challenges and opportunities associated with deploying [large BERT Question Answering Transformer](https://huggingface.co/bert-large-uncased-whole-word-masking-finetuned-squad) models inside Redis, from Hugging Face, where [RedisGears](/howtos/redisgears) and [RedisAI](/howtos/redisai/getting-started) perform a lot of heavy lifting while leveraging the in-memory datastore Redis.
+In this article, we will explore the challenges and opportunities associated with deploying [large BERT Question Answering Transformer](https://huggingface.co/bert-large-uncased-whole-word-masking-finetuned-squad) models from Hugging Face, using [RedisGears](/howtos/redisgears) and [RedisAI](/howtos/redisai/getting-started) to perform a lot of the heavy lifting while also leveraging the in-memory datastore Redis.
 
 ## Why do we need RedisAI?
 
