--- a/docs/howtos/bert-qa-benchmarking/index-bert-qa-benchmarking-with-redisai-and-redisgears.mdx
+++ b/docs/howtos/bert-qa-benchmarking/index-bert-qa-benchmarking-with-redisai-and-redisgears.mdx
@@ -58,7 +58,7 @@ sys	0m0.000s
 
 The scriptscript runs BERT QA inference on **each shard**, which is equal to the number of available CPUs by default, and returns answers under one second.
 
-Incredibly, right? Let's dive in!
+Incredible, right? Let's dive in!
 
 # Background
 
