--- a/docs/howtos/bert-qa-benchmarking/index-bert-qa-benchmarking-with-redisai-and-redisgears.mdx
+++ b/docs/howtos/bert-qa-benchmarking/index-bert-qa-benchmarking-with-redisai-and-redisgears.mdx
@@ -121,7 +121,7 @@ def load_bert():
         print(cc.infoget('bert-qa{%s}' %hash_tag.decode('utf-8')))
 ```
 
-The [full code is available on GitHub](https://github.com/applied-knowledge-systems/the-pattern-api/blob/156633b9934f1243775671ce6c18ff2bf471c0ce/qasearch/export_load_bert.py)
+The [full code is available on GitHub](https://github.com/applied-knowledge-systems/the-pattern-api/blob/156633b9934f1243775671ce6c18ff2bf471c0ce/qasearch/export_load_bert.py).
 
 And when a question comes from the user, we tokenize and append the question to the list of potential answers before running the RedisAI model:
 
