--- a/docs/howtos/bert-qa-benchmarking/index-bert-qa-benchmarking-with-redisai-and-redisgears.mdx
+++ b/docs/howtos/bert-qa-benchmarking/index-bert-qa-benchmarking-with-redisai-and-redisgears.mdx
@@ -240,7 +240,7 @@ If you are wondering, `-n` = number of times. In this case we run the benchmark 
 
 – `precision 3` if you want more decimals in the ms
 
-More information about the benchmarking tool can be found on the [redis.io Benchmarks page](https://redis.io/topics/benchmarks)
+More information about the benchmarking tool can be found on the [redis.io Benchmarks page](https://redis.io/topics/benchmarks).
 
 if you don't have redis-utils installed locally, you can use Docker as follows:
 
