updated calendar for upcoming streams

--- a/docs/get-involved/redis-live/index-redis-live.mdx
+++ b/docs/get-involved/redis-live/index-redis-live.mdx
@@ -12,21 +12,23 @@ Redis Live hosts a variety of live-streamed content on [Twitch](https://www.twit
 
 Check out these upcoming streams:
 
-|        Date        |    Time     | Streamers                                        | Show                                                    |
-| :----------------: | :---------: | :----------------------------------------------- | :------------------------------------------------------ |
-|   Friday, June 3   | 6:00 PM UTC | [Guy Royse][guy]                                 | Tracking Aircraft with Redis + Software-Defined Radio   |
-|  Friday, June 10   | 3:00 PM UTC | [Justin Castilla][justin], [Suze Shardlow][suze] | Working with Redis Data Structures                      |
-|  Friday, June 10   | 6:00 PM UTC | [Guy Royse][guy]                                 | Working on Redis OM for Node.js                         |
-| Wednesday, June 15 | 4:00 PM UTC | [Simon Prickett][simon]                          | Up and Running with the RU102PY Redis University Course |
-| Wednesday, June 15 | 5:00 PM UTC | [Simon Prickett][simon]                          | Up and Running with the RU102JS Redis University Course |
-| Thursday, June 16  | 3:00 PM UTC | [Simon Prickett][simon], [Suze Shardlow][suze]   | Counting Things At Scale with Redis                     |
-| Wednesday, June 29 | 6:00 PM UTC | [Steve Lorello][steve]                           | Real-Time Stock Analytics with Redis Stack and .NET     |
-| Thursday, June 30  | 6:00 PM UTC | [Savannah Norem][savannah], [Guy Royse][guy]     | Comparing Sets, Bloom Filters, and Cuckoo Filters       |
-| Wednesday, July 6  | 6:00 PM UTC | [Steve Lorello][steve]                           | Real-Time Stock Analytics with Redis Stack and .NET     |
-|   Friday, July 8   | 6:00 PM UTC | [Brian Sam-Bodden][brian], [Guy Royse][guy]      | Extending Redis with Rust                               |
-| Wednesday, July 13 | 6:00 PM UTC | [Steve Lorello][steve]                           | Real-Time Stock Analytics with Redis Stack and .NET     |
-|  Friday, July 15   | 6:00 PM UTC | [Brian Sam-Bodden][brian], [Guy Royse][guy]      | Extending Redis with Rust                               |
-|  Friday, July 22   | 6:00 PM UTC | [Brian Sam-Bodden][brian], [Guy Royse][guy]      | Extending Redis with Rust                               |
+|        Date        |    Time     | Streamers                                             | Show                                                    |
+| :----------------: | :---------: | :---------------------------------------------------- | :------------------------------------------------------ |
+|   Friday, June 3   | 6:00 PM UTC | [Guy Royse][guy]                                      | Tracking Aircraft with Redis + Software-Defined Radio   |
+|  Friday, June 10   | 3:00 PM UTC | [Justin Castilla][justin], [Suze Shardlow][suze]      | Working with Redis Data Structures                      |
+|  Friday, June 10   | 6:00 PM UTC | [Guy Royse][guy]                                      | Working on Redis OM for Node.js                         |
+| Wednesday, June 15 | 4:00 PM UTC | [Simon Prickett][simon]                               | Up and Running with the RU102PY Redis University Course |
+| Wednesday, June 15 | 5:00 PM UTC | [Simon Prickett][simon]                               | Up and Running with the RU102JS Redis University Course |
+| Thursday, June 16  | 3:00 PM UTC | [Simon Prickett][simon], [Suze Shardlow][suze]        | Counting Things At Scale with Redis                     |
+| Thursday, June 23  | 6:00 PM UTC | [Justin Castilla][justin], [Savannah Norem][savannah] | Redis OM: Python + JSON + Search                        |
+|  Friday, June 24   | 6:00 PM UTC | [Guy Royse][guy]                                      | Graph, Graph, and Graph: Attorneys at Law               |
+| Wednesday, June 29 | 6:00 PM UTC | [Steve Lorello][steve]                                | Real-Time Stock Analytics with Redis Stack and .NET     |
+| Thursday, June 30  | 6:00 PM UTC | [Savannah Norem][savannah], [Guy Royse][guy]          | Comparing Sets, Bloom Filters, and Cuckoo Filters       |
+| Wednesday, July 6  | 6:00 PM UTC | [Steve Lorello][steve]                                | Real-Time Stock Analytics with Redis Stack and .NET     |
+|   Friday, July 8   | 6:00 PM UTC | [Brian Sam-Bodden][brian], [Guy Royse][guy]           | Extending Redis with Rust                               |
+| Wednesday, July 13 | 6:00 PM UTC | [Steve Lorello][steve]                                | Real-Time Stock Analytics with Redis Stack and .NET     |
+|  Friday, July 15   | 6:00 PM UTC | [Brian Sam-Bodden][brian], [Guy Royse][guy]           | Extending Redis with Rust                               |
+|  Friday, July 22   | 6:00 PM UTC | [Brian Sam-Bodden][brian], [Guy Royse][guy]           | Extending Redis with Rust                               |
 
 ### Recurring Streams
 
