Adds Simon RU102J stream June 28 2022.

--- a/docs/get-involved/redis-live/index-redis-live.mdx
+++ b/docs/get-involved/redis-live/index-redis-live.mdx
@@ -22,6 +22,7 @@ Check out these upcoming streams:
 | Thursday, June 16  | 3:00 PM UTC | [Simon Prickett][simon], [Suze Shardlow][suze]        | Counting Things At Scale with Redis                     |
 | Thursday, June 23  | 6:00 PM UTC | [Justin Castilla][justin], [Savannah Norem][savannah] | Redis OM: Python + JSON + Search                        |
 |  Friday, June 24   | 6:00 PM UTC | [Guy Royse][guy]                                      | Graph, Graph, and Graph: Attorneys at Law               |
+|  Tuesday, June 28  | 3:00 PM UTC | [Simon Prickett][simon]                               | Up and Running with the RU102J Redis University Course  |
 | Wednesday, June 29 | 6:00 PM UTC | [Steve Lorello][steve]                                | Real-Time Stock Analytics with Redis Stack and .NET     |
 | Thursday, June 30  | 6:00 PM UTC | [Savannah Norem][savannah], [Guy Royse][guy]          | Comparing Sets, Bloom Filters, and Cuckoo Filters       |
 | Wednesday, July 6  | 6:00 PM UTC | [Steve Lorello][steve]                                | Real-Time Stock Analytics with Redis Stack and .NET     |
