changing show names for recurring streams

--- a/docs/get-involved/redis-live/index-redis-live.mdx
+++ b/docs/get-involved/redis-live/index-redis-live.mdx
@@ -24,9 +24,9 @@ Check out our upcoming events:
 
 |        Date        |    Time     | Streamers                                             | Show                                                    |
 | :----------------: | :---------: | :---------------------------------------------------- | :------------------------------------------------------ |
-| Wednesday, July 6  | 6:00 PM UTC | [Steve Lorello][steve]                                | Real-Time Stock Analytics with Redis Stack and .NET     |
+| Wednesday, July 6  | 6:00 PM UTC | [Steve Lorello][steve]                                | Steve works on Redis OM .NET                            |
 |   Friday, July 8   | 6:00 PM UTC | [Brian Sam-Bodden][brian], [Guy Royse][guy]           | Extending Redis with Rust                               |
-| Wednesday, July 13 | 6:00 PM UTC | [Steve Lorello][steve]                                | Real-Time Stock Analytics with Redis Stack and .NET     |
+| Wednesday, July 13 | 6:00 PM UTC | [Steve Lorello][steve]                                | Coding with Steve                                       |
 |  Thursday, July 14 | 3:00 PM UTC | [Simon Prickett][simon]                               | Introduction to Redis Streams with RedisInsight         |
 |  Friday, July 15   | 6:00 PM UTC | [Brian Sam-Bodden][brian], [Guy Royse][guy]           | Extending Redis with Rust                               |
 |  Friday, July 22   | 6:00 PM UTC | [Brian Sam-Bodden][brian], [Guy Royse][guy]           | Extending Redis with Rust                               |
